[workspace]
resolver = "3"
members = ["examples/lcf-explorer"]
package.exclude = ["examples/lcf-explorer"]

[patch.crates-io]
lcf = { path = "." }

[package]
name = "lcf"
version = "0.4.0"
edition = "2024"
description = "Bidirectional parser for the lcf file format used by RPG Maker 2000 games"
readme = "README.md"
repository = "https://github.com/AcrylonitrileButadieneStyrene/lcf-rs"
license = "MIT OR Apache-2.0"
keywords = ["rpgmaker2000", "r2k", "lcf"]
categories = ["encoding"]
exclude = [".gitignore", ".gitmodules", "justfile", "tests/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
binrw = "0.15.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
