[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"

[package]
name = "lcf"
version = "0.9.2"
edition = "2024"
description = "Bidirectional parser for the lcf file format used by RPG Maker 2000 games"
readme = "README.md"
repository = "https://github.com/AcrylonitrileButadieneStyrene/lcf-rs"
license = "MIT OR Apache-2.0"
keywords = ["rpgmaker2000", "r2k", "lcf"]
categories = ["encoding"]
exclude = [".gitignore", "tests/"]

[dependencies]
binrw = "0.15.0"
byteorder = "1.5.0"
num_enum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
rayon = "1.11.0"
