[package]
name = "lcf"
version = "0.9.3"
edition = "2024"
description = "Bidirectional parser for the lcf file format used by RPG Maker 2000 games"
readme = "README.md"
repository = "https://github.com/AcrylonitrileButadieneStyrene/lcf-rs"
license = "MIT OR Apache-2.0"
keywords = ["rpgmaker2000", "r2k", "lcf"]
categories = ["encoding"]
exclude = [".gitignore", "tests/"]

[dependencies]
binrw = "0.15.0"
byteorder = "1.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }
num_enum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
thiserror = "2.0.16"

[dev-dependencies]
rayon = "1.11.0"
